Resolves #31: Added AppConfig.getBaseUrl() and set JSPs to use it.