@@ -1,7 +1,7 @@
 package com.justdavis.karl.rpstourney.webapp.config;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 import javax.inject.Inject;
 
@@ -16,14 +16,16 @@ public final class MockConfigLoader implements IConfigLoader {
 
 	/**
 	 * Constructs a new {@link MockConfigLoader} instance. This constructor is
-	 * intended for use in ITs, as they can pass in the appropriate parameters
-	 * manually.
+	 * intended for use in unit tests, as they can pass in the appropriate
+	 * parameters manually.
 	 * 
+	 * @param baseUrl
+	 *            the value to use for {@link AppConfig#getBaseUrl()}
 	 * @param clientServiceRoot
 	 *            the value to use for {@link AppConfig#getClientServiceRoot()}
 	 */
-	public MockConfigLoader(URI clientServiceRoot) {
-		AppConfig actualConfig = new AppConfig(clientServiceRoot);
+	public MockConfigLoader(URL baseUrl, URL clientServiceRoot) {
+		AppConfig actualConfig = new AppConfig(baseUrl, clientServiceRoot);
 		this.config = actualConfig;
 	}
 
@@ -33,12 +35,12 @@ public final class MockConfigLoader implements IConfigLoader {
 	@Inject
 	public MockConfigLoader() {
 		/*
-		 * Once AppConfig has more to it than just a single URI, I'd recommend
-		 * loading the rest of the config from an XML file using a separate
-		 * (customized) XmlConfigLoader instance.
+		 * Once AppConfig has more to it than just a couple of fields, I'd
+		 * recommend loading the rest of the config from an XML file using a
+		 * separate (customized) XmlConfigLoader instance.
 		 */
 
-		this(getServiceUriForManualTesting());
+		this(getBaseUrlForManualTesting(), getServiceUrlForManualTesting());
 	}
 
 	/**
@@ -46,13 +48,31 @@ public final class MockConfigLoader implements IConfigLoader {
 	 *         things are being tested manually via
 	 *         <code>WebAppJettyLauncher</code>
 	 */
-	private static URI getServiceUriForManualTesting() {
-		URI clientServiceRoot;
+	private static URL getBaseUrlForManualTesting() {
+		URL clientServiceRoot;
 		try {
 			// This is the address that WebAppJettyLauncher will run at.
-			clientServiceRoot = new URI("http://localhost:8088/");
-		} catch (URISyntaxException e) {
-			// Won't happen, as the URI is static.
+			clientServiceRoot = new URL("http://localhost:8089/");
+		} catch (MalformedURLException e) {
+			// Won't happen, as the URL is static.
+			throw new BadCodeMonkeyException(e);
+		}
+		return clientServiceRoot;
+	}
+
+	/**
+	 * @return the {@link AppConfig#getClientServiceRoot()} that will work when
+	 *         things are being tested manually via
+	 *         <code>ServiceAppJettyLauncher</code> and
+	 *         <code>WebAppJettyLauncher</code>
+	 */
+	private static URL getServiceUrlForManualTesting() {
+		URL clientServiceRoot;
+		try {
+			// This is the address that ServiceAppJettyLauncher will run at.
+			clientServiceRoot = new URL("http://localhost:8088/");
+		} catch (MalformedURLException e) {
+			// Won't happen, as the URL is static.
 			throw new BadCodeMonkeyException(e);
 		}
 		return clientServiceRoot;
